--- a/visualization-1.html
+++ b/visualization-1.html
@@ -46,17 +46,17 @@
                   Plots
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="/Web-Design-Challenge/visualization-1.html">Max Temperature</a>
-                  <a class="dropdown-item" href="/Web-Design-Challenge/visualization-2.html">Humidity</a>
-                  <a class="dropdown-item" href="/Web-Design-Challenge/visualization-3.html">Cloudiness</a>
-                  <a class="dropdown-item" href="/Web-Design-Challenge/visualization-4.html">Wind Speed</a>
+                  <a class="dropdown-item" href="visualization-1.html">Max Temperature</a>
+                  <a class="dropdown-item" href="visualization-2.html">Humidity</a>
+                  <a class="dropdown-item" href="visualization-3.html">Cloudiness</a>
+                  <a class="dropdown-item" href="visualization-4.html">Wind Speed</a>
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/Web-Design-Challenge/comparison.html">Comparison</a>
+                <a class="nav-link" href="comparison.html">Comparison</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/Web-Design-Challenge/data.html">Data</a>
+                <a class="nav-link" href="data.html">Data</a>
               </li>
             </ul>
           </div>
@@ -90,16 +90,16 @@
         <hr>
         <div class='row'>
           <div class="col col-3 col-md-6">
-            <a href="/Web-Design-Challenge/visualization-1.html"><img src="/assets/images/Fig1.png" alt="Latitude vs. Temperature" id="imgsel"></a>
+            <a href="visualization-1.html"><img src="/assets/images/Fig1.png" alt="Latitude vs. Temperature" id="imgsel"></a>
           </div>
           <div class="col col-3 col-md-6">
-            <a href="/Web-Design-Challenge/visualization-2.html"><img src="/assets/images/Fig2.png" alt="Latitude vs. Humidity"></a>
+            <a href="visualization-2.html"><img src="/assets/images/Fig2.png" alt="Latitude vs. Humidity"></a>
           </div>
           <div class="col col-3 col-md-6">
-            <a href="/Web-Design-Challenge/visualization-3.html"><img src="/assets/images/Fig3.png" alt="Latitude vs. Cloudiness"></a>
+            <a href="visualization-3.html"><img src="/assets/images/Fig3.png" alt="Latitude vs. Cloudiness"></a>
           </div>
           <div class="col col-3 col-md-6">
-            <a href="/Web-Design-Challenge/visualization-4.html"><img src="/assets/images/Fig4.png" alt="Latitude vs. Wind Speed"></a>
+            <a href="visualization-4.html"><img src="/assets/images/Fig4.png" alt="Latitude vs. Wind Speed"></a>
           </div>
         </div>
       </div>
