--- a/visualization-4.html
+++ b/visualization-4.html
@@ -23,7 +23,7 @@
 
 <body>
   <!-- start of header -->
-  <body style="background-color:violet;"></body>
+  <body style="background-color:light gray;"></body>
   <div>
     <div class="row">
       <div class="col col-6 homebtn">
