--- a/comparison.html
+++ b/comparison.html
@@ -23,7 +23,7 @@
 
 <body>
   <!-- start of header -->
-  <body style="background-color:violet;"></body>
+  <body style="background-color:light gray;"></body>
   <div>
     <div class="row">
       <div class="col col-6 homebtn">
@@ -46,17 +46,17 @@
                   Plots
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="/Web-Design-Challenge-master/visualization-1.html">Max Temperature</a>
-                  <a class="dropdown-item" href="/Web-Design-Challenge-master/visualization-2.html">Humidity</a>
-                  <a class="dropdown-item" href="/Web-Design-Challenge-master/visualization-3.html">Cloudiness</a>
-                  <a class="dropdown-item" href="/Web-Design-Challenge-master/visualization-4.html">Wind Speed</a>
+                  <a class="dropdown-item" href="/Web-Design-Challenge/visualization-1.html">Max Temperature</a>
+                  <a class="dropdown-item" href="/Web-Design-Challenge/visualization-2.html">Humidity</a>
+                  <a class="dropdown-item" href="/Web-Design-Challenge/visualization-3.html">Cloudiness</a>
+                  <a class="dropdown-item" href="/Web-Design-Challenge/visualization-4.html">Wind Speed</a>
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/Web-Design-Challenge-master/comparison.html">Comparison</a>
+                <a class="nav-link" href="/Web-Design-Challenge/comparison.html">Comparison</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/Web-Design-Challenge-master/data.html">Data</a>
+                <a class="nav-link" href="/Web-Design-Challenge/data.html">Data</a>
               </li>
             </ul>
           </div>
@@ -79,19 +79,19 @@
         <div class='row'>
           <div class="col col-12 col-md-6">
               <h3>vs. Max Temperature</h3>
-            <a href="/Web-Design-Challenge-master/visualization-1.html"><img src="./assets/images/Fig1.png" alt="Latitude vs. Temperature"></a>
+            <a href="/Web-Design-Challenge/visualization-1.html"><img src="./assets/images/Fig1.png" alt="Latitude vs. Temperature"></a>
           </div>
           <div class="col col-12 col-md-6">
               <h3>vs. Humidity</h3>
-            <a href="/Web-Design-Challenge-master/visualization-2.html"><img src="./assets/images/Fig2.png" alt="Latitude vs. Humidity"></a>
+            <a href="/Web-Design-Challenge/visualization-2.html"><img src="./assets/images/Fig2.png" alt="Latitude vs. Humidity"></a>
           </div>
           <div class="col col-12 col-md-6">
               <h3>vs. Cloudiness</h3>
-            <a href="/Web-Design-Challenge-master/visualization-3.html"><img src="./assets/images/Fig3.png" alt="Latitude vs. Cloudiness"></a>
+            <a href="/Web-Design-Challenge/visualization-3.html"><img src="./assets/images/Fig3.png" alt="Latitude vs. Cloudiness"></a>
           </div>
           <div class="col col-12 col-md-6">
               <h3>vs. Wind Speed</h3>
-            <a href="/Web-Design-Challenge-master/visualization-4.html"><img src="./assets/images/Fig4.png" alt="Latitude vs. Wind Speed"></a>
+            <a href="/Web-Design-Challenge/visualization-4.html"><img src="./assets/images/Fig4.png" alt="Latitude vs. Wind Speed"></a>
           </div>
         </div>
       </div>
